# All-Rounder-Net

./: README.md  pyproject.toml
all_rounder_net/: __init__.py  model.py  trainer.py
all_rounder_net/games/: __init__.py  base.py  dots_and_boxes.py  gardner_chess.py  nim.py  tictactoe.py
scripts/: generate_certs.sh  run_https.py  train.py
static/: app.js  style.css
templates/: index.html
web/: __init__.py  app.py
